--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include COPYING MANIFEST MANIFEST.in README setup.py Makefile
+include CHANGES COPYING MANIFEST MANIFEST.in README setup.py Makefile
 include scripts/pgxn scripts/pgxncli.py
 recursive-include pgxn *.py
 recursive-include tests *.py
