The test suite can be run with Python 3
Test suite moved as pgxnclient subpackage or 2to3 will not work with it.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include CHANGES COPYING MANIFEST.in README setup.py Makefile
 include scripts/pgxn
 recursive-include pgxnclient *.py
-recursive-include tests *.py
-recursive-include tests/data *
+recursive-include testdata *
 include docs/conf.py docs/Makefile docs/*.rst
