Package modified to make the command scripts work with setup.py
The procedire is not entirely optimal: upon install the symlinks are
replaced by scripts without the executable script. Commands dispatch
works anyway though, and distro packagers are free to make a better work.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include CHANGES COPYING MANIFEST.in README setup.py Makefile
-include scripts/pgxn
+include bin/pgxn bin/pgxnclient
 recursive-include pgxnclient *.py
 recursive-include testdata *
+include pgxnclient/libexec/pgxn-*
 include docs/conf.py docs/Makefile docs/*.rst
