Changed README extension in manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include CHANGES COPYING MANIFEST.in README setup.py Makefile
+include CHANGES COPYING MANIFEST.in README.rst setup.py Makefile
 include bin/pgxn bin/pgxnclient
 recursive-include pgxnclient *.py
 recursive-include testdata *
