--- a/docs/Makefile
+++ b/docs/Makefile
@@ -46,3 +46,5 @@ ez_setup:
 clean:
 	$(RM) -r html
 
+upload:
+	tar czf - -C html/ . | ssh shell.pgfoundry.org tar xzvf - -C /home/pgfoundry.org/groups/pgxnclient/htdocs
