--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py27,py37
+envlist = py27,py36
 
 [testenv]
 deps=
-	pytest
-	mock
+  pytest
+extras=test
 commands=pytest
+passenv=HOME
