--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-sudo: false
 language: python
 dist: xenial
+sudo: false
 python:
   - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
   - "3.7"
-install: pip install tox-travis
-script: tox
+script: python setup.py test
